--- a/Memoria/Config/preamble.tex
+++ b/Memoria/Config/preamble.tex
@@ -786,6 +786,10 @@ hyperfootnotes=false
 
 \usepackage{dirtree}
 
+\usepackage{mathtools}
+\DeclarePairedDelimiter\bra{\langle}{\rvert}
+\DeclarePairedDelimiter\ket{\lvert}{\rangle}
+
 % Some TFG/TFM regulations state that double spacing should be used In my
 % opinion it is obsolete and ugly, but if you want to do so, add the following
 % command here:
