--- a/Memoria/Book/biblio/biblio.bib
+++ b/Memoria/Book/biblio/biblio.bib
@@ -1332,3 +1332,59 @@ isbn="978-3-642-10366-7"
   urldate = {2024-03-07}
 }
 
+@misc{ina219,
+  title = {INA219 Zerø-Drift, Bidirectional Current/Power Monitor With I2C Interface},
+  url = {https://www.ti.com/lit/ds/symlink/ina219.pdf?ts=1723724805837&ref_url=https%253A%252F%252Fwww.ti.com%252Fproduct%252Fes-mx%252FINA219%253Fbm-verify%253DAAQAAAAJ_____9ZEXlNQPn2tYM7QtmygnCEHfpzKoH6unttqZECxY5cY9dJtT_-s2R3eDAzfArUeFRvCfV4Ur08Y3HnKilKJ7Szrr9YX6z3mtMgAUHyZyfavmOiblkuYYFg-zUOBjoNxskrH3NZ3OR_Rz4PP4y7yYuuaflrF1mdNPzHnvgmQUsBit_Q5YboJ5Ot3vMdqkAWvwjk76camwz0fokZ6i2rXcC100bIFjenlbyFMyO912_EbaAfidg74vDr2lgbl8JiSheo3NRK7xlrtBytuT54Il7WhxrhQp0yNis-XSxjL8gi6-4tJ9-1Wtgs-},
+  year = {2015},
+  urldate = {2024-03-07}
+}
+
+@misc{esp_timer_get_time,
+  title = {ESP Timer (High Resolution Timer)},
+  url = {https://docs.espressif.com/projects/esp-idf/en/stable/esp32/api-reference/system/esp_timer.html},
+  year = {2016},
+  urldate = {2024-03-07}
+}
+
+@misc{get_absolute_time,
+  title = {High Level APIs},
+  url = {https://www.raspberrypi.com/documentation/pico-sdk/high_level.html#group_pico_time},
+  year = {2012},
+  urldate = {2024-03-07}
+}
+
+@misc{stm32_utilities,
+  title = {Download and Erase don't work in Keil},
+  url = {https://community.st.com/t5/stm32-mcus-products/download-and-erase-don-t-work-in-keil/td-p/557443},
+  year = {2010},
+  urldate = {2024-03-07}
+}
+
+@misc{stm32cube,
+  title = {STM32CubeL4},
+  url = {https://github.com/STMicroelectronics/STM32CubeL4/tree/master},
+  year = {2024},
+  urldate = {2024-03-07}
+}
+
+@Article{Rietsche2022,
+author={Rietsche, Roman
+and Dremel, Christian
+and Bosch, Samuel
+and Steinacker, L{\'e}a
+and Meckel, Miriam
+and Leimeister, Jan-Marco},
+title={Quantum computing},
+journal={Electronic Markets},
+year={2022},
+month={Dec},
+day={01},
+volume={32},
+number={4},
+pages={2525-2536},
+abstract={Quantum computing promises to be the next disruptive technology, with numerous possible applications and implications for organizations and markets. Quantum computers exploit principles of quantum mechanics, such as superposition and entanglement, to represent data and perform operations on them. Both of these principles enable quantum computers to solve very specific, complex problems significantly faster than standard computers. Against this backdrop, this fundamental gives a brief overview of the three layers of a quantum computer: hardware, system software, and application layer. Furthermore, we introduce potential application areas of quantum computing and possible research directions for the field of information systems.},
+issn={1422-8890},
+doi={10.1007/s12525-022-00570-y},
+url={https://doi.org/10.1007/s12525-022-00570-y}
+}
+
