--- a/Memoria/Book/acronyms/defacronymsgl.tex
+++ b/Memoria/Book/acronyms/defacronymsgl.tex
@@ -133,6 +133,7 @@
 \newacronym{FreeRTOS}{FreeRTOS}{Free Real-Time Operating System}
 \newacronym{SMP}{SMP}{Symmetric MultiProcessing}
 \newacronym{DIY}{DIY}{Do It Yourself}
+\newacronym{IDE}{IDE}{Integrated Development Environment}
 
 \newacronym{ACCCHARS}{ÁÉÍÓÚÜÑáéíóúüñ}{Long ÁÉÍÓÚÜÑáéíóúüñ}
 
