--- a/Memoria/Book/biblio/biblio.bib
+++ b/Memoria/Book/biblio/biblio.bib
@@ -1360,7 +1360,7 @@ isbn="978-3-642-10366-7"
   urldate = {2024-03-07}
 }
 
-@misc{stm32cube,
+@misc{stm32cubeL4,
   title = {STM32CubeL4},
   url = {https://github.com/STMicroelectronics/STM32CubeL4/tree/master},
   year = {2024},
@@ -1386,5 +1386,47 @@ abstract={Quantum computing promises to be the next disruptive technology, with 
 issn={1422-8890},
 doi={10.1007/s12525-022-00570-y},
 url={https://doi.org/10.1007/s12525-022-00570-y}
+}
+
+@misc{stm32cube,
+  title = {STM32Cube},
+  url = {https://www.st.com/en/ecosystems/stm32cube.html},
+  year = {2024},
+  urldate = {2024-03-07}
+}
+
+@misc{stm32cubemx,
+  title = {STM32CubeMX},
+  url = {https://www.st.com/en/development-tools/stm32cubemx.html},
+  year = {2024},
+  urldate = {2024-03-07}
+}
+
+@misc{stm32cubeide,
+  title = {STM32CubeIDE},
+  url = {https://www.st.com/en/development-tools/stm32cubeide.html},
+  year = {2024},
+  urldate = {2024-03-07}
+}
+
+@misc{stm32cubemonitor,
+  title = {STM32CubeMonitor},
+  url = {https://www.st.com/en/development-tools/stm32cubemonitor.html},
+  year = {2024},
+  urldate = {2024-03-07}
+}
+
+@misc{stm32cubeprogrammer,
+  title = {STM32CubeProg},
+  url = {https://www.st.com/en/development-tools/stm32cubeprog.html},
+  year = {2024},
+  urldate = {2024-03-07}
+}
+
+@misc{keil,
+  title = {µVision GUI},
+  url = {https://developer.arm.com/documentation/101407/0540/User-Interface/uVision-GUI},
+  year = {2024},
+  urldate = {2024-03-07}
 }
 
