--- a/Memoria/Book/presupuesto/presupuesto.tex
+++ b/Memoria/Book/presupuesto/presupuesto.tex
@@ -30,7 +30,7 @@
 
 \chapter{Temporización y presupuesto}\label{cha:temp_pres}
 
-En este capítulo se incluye la temporización del poryecto y una estimación del coste total para la realización del mismo.
+En este capítulo se incluye la temporización del proyecto y una estimación del coste total para la realización del mismo.
 
 
 \section{PLanificación temporal}\label{sec:plan_temp}
@@ -38,12 +38,11 @@ En este capítulo se incluye la temporización del poryecto y una estimación de
 En primer lugar, se indica la organización temporal seguida a lo largo del proyecto mediante el diagrama mostrado en~\ref{fig:diagramaDeGant} de acuerdo a las siguientes tareas:
 
 \begin{enumerate}
-    \item Familiarización con el software Contiki-ng.
-    \item Estudio de la implementación inicial del protocolo.
-    \item Desarrollo de cambios funcionales para añadir adaptabilidad a redes dinámicas.
-    \item Adaptación de la implementación para ejecución en plataformas Raspberry Pi y plataformas soportadas por Contiki-ng.
-    \item Diseño y ejecución de pruebas en el emulador Cooja.
-    \item Diseño y ejecución de pruebas en escenarios utilizando nRF52840-DK y nRF5340-DK.
+    \item Selección de algoritmos criptográficos.
+    \item Selección de dispositivos \ac{IoT} empleados.
+    \item Análisis de compatibilidad.
+    \item Implementación de los algoritmos en los dispositivos seleccionados.
+    \item Diseño y realización de pruebas de rendimiento.
     \item Documentación.
 \end{enumerate}
     
@@ -63,10 +62,10 @@ En primer lugar, se indica la organización temporal seguida a lo largo del proy
     bar top shift=0.25,
     group right shift=0,
     group top shift=.6,
-    group height=.3]{1}{30}
+    group height=.3]{1}{27}
     %labels
-    \gantttitle{Semanas}{30} \\
-    \gantttitlelist{1,...,30}{1} \\
+    \gantttitle{Semanas}{27} \\
+    \gantttitlelist{1,...,27}{1} \\
     % \gantttitle{1er mes}{4} 
     % \gantttitle{2do mes}{4} 
     % \gantttitle{3er mes}{4} 
@@ -74,14 +73,12 @@ En primer lugar, se indica la organización temporal seguida a lo largo del proy
     % \gantttitle{5to mes}{4} 
     % \gantttitle{6to mes}{4}\\
     %tasks
-    \ganttbar[bar/.append style={fill=cyan}]{Tarea 1}{1}{4} \\
-    \ganttbar[bar/.append style={fill=cyan}]{Tarea 2}{5}{7} \\
-    \ganttbar[bar/.append style={fill=cyan}]{Tarea 3}{8}{9} \\
-    \ganttbar[bar/.append style={fill=cyan}]{Tarea 4}{10}{14}
-    \ganttbar[bar/.append style={fill=cyan}]{}{20}{21} \\
-    \ganttbar[bar/.append style={fill=cyan}]{Tarea 5}{13}{19} \\
-    \ganttbar[bar/.append style={fill=cyan}]{Tarea 6}{20}{26} \\
-    \ganttbar[bar/.append style={fill=cyan}]{Tarea 7}{27}{30}
+    \ganttbar[bar/.append style={fill=cyan}]{Tarea 1}{1}{3} \\
+    \ganttbar[bar/.append style={fill=cyan}]{Tarea 2}{4}{7} \\
+    \ganttbar[bar/.append style={fill=cyan}]{Tarea 3}{8}{10} \\
+    \ganttbar[bar/.append style={fill=cyan}]{Tarea 4}{10}{17} \\
+    \ganttbar[bar/.append style={fill=cyan}]{Tarea 5}{16}{23} \\
+    \ganttbar[bar/.append style={fill=cyan}]{Tarea 6}{23}{27}
 
     % \ganttgroup{Grupo 3}{1}{17}
     
@@ -107,12 +104,11 @@ Para poder llevar a cabo la realización de este proyecto, se han requerido vari
 Estos han sido listados a continuación:
 
 \begin{itemize}
-    \item Ordenador de sobremesa.
-    \item nRF5340 dk.
-    \item nRF52840 dk.
-    \item Pilas CR2032.
-    \item CC2531.
-    \item Raspberry Pi 3 model B.
+    \item Ordenador pórtatil.
+    \item ESP-32 Kit de desarrollo C V4.
+    \item ESP-Prog.
+    \item Lilygo T-Display.
+    \item Nucleo-L4R5ZI.
 \end{itemize}
 
 El precio de estos dispositivos se especifica en la tabla~\ref{tab:recursos_hardware} así como el total del coste de los dispositivos \textit{hardware}.
@@ -122,13 +118,12 @@ El precio de estos dispositivos se especifica en la tabla~\ref{tab:recursos_hard
 \begin{tabular}{|c|c|c|c|}
 \hline
 Concepto                & Precio por Unidad & Cantidad & Subtotal \\ \hline
-Ordenador de sobremesa  & 2000,00 \euro                & 1        & 2000,00 \euro       \\ \hline
-nRF5340 dk              & 46,06   \euro                & 2        & 92,12   \euro       \\ \hline
-nRF52840 dk             & 47,22   \euro                & 6        & 283,32  \euro       \\ \hline
-CC2531                  & 7,59    \euro                & 1        & 7,59    \euro       \\ \hline
-Pilas CR2032            & 7,99    \euro                & 1        & 7,99    \euro       \\ \hline
-Raspberry Pi 3 model B  & 50,00   \euro                & 2        & 100,00  \euro       \\ \hline
-\multicolumn{3}{|c|}{TOTAL}                                       & 2491,02 \euro       \\ \hline
+Ordenador pórtatil      & 800,00 \euro                & 1        & 800,00 \euro       \\ \hline
+ESP-32 Kit de desarrollo C V4  & 12,99 \euro          & 1        & 12,99  \euro       \\ \hline
+ESP-Prog                & 14,63  \euro                & 1        & 14,63  \euro       \\ \hline
+Lilygo T-Display        & 8,99   \euro                & 1        & 8,99   \euro       \\ \hline
+Nucleo-L4R5ZI           & 20,22  \euro                & 1        & 20,22  \euro       \\ \hline
+\multicolumn{3}{|c|}{TOTAL}                                      & 856,83 \euro       \\ \hline
 \end{tabular}
 \caption{Recursos hardware usados}
 \label{tab:recursos_hardware}
@@ -163,10 +158,10 @@ La cuma final se refleja en la tabla~\ref{tab:ejec_material}
 \begin{tabular}{|c|c|}
 \hline
 Concepto           & Subtotal \\ \hline
-Recursos hardware  & 2491,02  \euro        \\ \hline
+Recursos hardware  & 856,83   \euro        \\ \hline
 Recursos software  & 0,00     \euro        \\ \hline
 Coste mano de obra & 24000,00 \euro        \\ \hline
-TOTAL              & 26491,02 \euro        \\ \hline
+TOTAL              & 24856,83 \euro        \\ \hline
 \end{tabular}
 \caption{Presupuesto de ejecución material}
 \label{tab:ejec_material}
