A falta de Kyber, motivación, resultados y conclusiones

--- a/Memoria/Book/abstract/abstract.tex
+++ b/Memoria/Book/abstract/abstract.tex
@@ -32,6 +32,14 @@
 
 \addcontentsline{toc}{chapter}{Abstract}
 
+%En este TFM se ha llevado a cabo la adaptación y ejecución de varios algoritmos criptográficos postcuánticos, entre los cuales se encuentran Dilithium, Kyber y Sphincs en distintos dispositivos relativos a IoT, como son ESP32, RP2040 y STM32.
+
+%Posteriormente, se ha llevado a cabo la medición de rendimiento de estas implementaciones y dichas mediciones han sido comparadas.
+
+In this TFM, multiple cryptographic post-quantum algorithms, such as Dilithium, Kyber and Sphincs, have been adapted and executed in various platforms relative to IoT, like ESP32, RP2040 and STM32.
+
+Afterwards, these implementations' performance have been measured and, finally, these measurements have been compared.
+
 \textbf{Keywords:} \myThesisKeywordsEnglish.
 
 %%% Local Variables:
