--- a/Memoria/Book/abstract/resumen.tex
+++ b/Memoria/Book/abstract/resumen.tex
@@ -33,6 +33,10 @@
 
 \addcontentsline{toc}{chapter}{Resumen}
 
+En este TFM se ha llevado a cabo la adaptación y ejecución de varios algoritmos criptográficos postcuánticos, entre los cuales se encuentran Dilithium, Kyber y Sphincs en distintos dispositivos relativos a IoT, como son ESP32, RP2040 y STM32.
+
+Posteriormente, se ha llevado a cabo la medición de rendimiento de estas implementaciones y, finalmente, dichas mediciones han sido comparadas.
+
 \textbf{Palabras clave:} \myThesisKeywords. %TODO: Palabras clave
 
 %%% Local Variables:
