--- a/Memoria/Book/acronyms/defacronymsgl.tex
+++ b/Memoria/Book/acronyms/defacronymsgl.tex
@@ -134,6 +134,9 @@
 \newacronym{SMP}{SMP}{Symmetric MultiProcessing}
 \newacronym{DIY}{DIY}{Do It Yourself}
 \newacronym{IDE}{IDE}{Integrated Development Environment}
+\newacronym{DSS}{DSS}{Digital Signature Standard}OW-CPA
+\newacronym{OW-CPA}{OW-CPA}{One Way Chosen Plaintext Attack}
+\newacronym{KEM}{KEM}{Key-Encapsulation Mecanism}
 
 \newacronym{ACCCHARS}{ÁÉÍÓÚÜÑáéíóúüñ}{Long ÁÉÍÓÚÜÑáéíóúüñ}
 
