--- a/Memoria/Book/biblio/biblio.bib
+++ b/Memoria/Book/biblio/biblio.bib
@@ -1430,3 +1430,65 @@ url={https://doi.org/10.1007/s12525-022-00570-y}
   urldate = {2024-03-07}
 }
 
+@misc{pqm4,
+  title = {µVision GUI},
+  url = {https://github.com/mupq/pqm4},
+  year = {2024},
+  urldate = {2024-03-07}
+}
+
+@unknown{progress-qubits,
+author = {Ezratty, Olivier},
+year = {2023},
+month = {03},
+pages = {},
+title = {Is there a Moore's law for quantum computing?}
+}
+
+@misc{falcon_spec,
+  title = {Falcon: Fast-Fourier Lattice-based Compact Signatures over NTRU},
+  url = {https://falcon-sign.info/falcon.pdf},
+  year = {2020},
+  urldate = {2024-03-07}
+}
+
+@misc{hqc_spec,
+  title = {Hamming Quasi-Cyclic (HQC)},
+  url = {https://pqc-hqc.org/doc/hqc-specification_2024-02-23.pdf},
+  year = {2024},
+  urldate = {2024-03-07}
+}
+
+@misc{mceliece_spec,
+  title = {Classic McEliece: conservative code-based cryptography},
+  url = {https://classic.mceliece.org/nist/mceliece-20201010.pdf},
+  year = {2020},
+  urldate = {2024-03-07}
+}
+
+@misc{sphincs_spec,
+  title = {Sphincs+},
+  url = {https://sphincs.org/data/sphincs+-r3.1-specification.pdf},
+  year = {2022},
+  urldate = {2024-03-07}
+}
+
+@techreport{lamport1979constructing,
+author = {Lamport, Leslie},
+title = {Constructing Digital Signatures from a One Way Function},
+year = {1979},
+month = {October},
+abstract = {At a coffee house in Berkeley around 1975, Whitfield Diffie described a problem to me that he had been trying to solve: constructing a digital signature for a document. I immediately proposed a solution. Though not very practical--it required perhaps 64 bits of published key to sign a single bit--it was the first digital signature algorithm. Diffie and Hellman mention it in their classic paper:
+
+Whitfield Diffie and Martin E. Hellman. New Directions in Cryptography. IEEE Transactions on Information Theory IT-22, 6 (1976), 644-654.
+(I think it's at the bottom right of page 650.)
+
+In 1978, Michael Rabin published a paper titled Digitalized Signatures containing a more practical scheme for generating digital signatures of documents. (I don't remember what other digital signature algorithms had already been proposed.) However, his solution had some drawbacks that limited its utility. This report describes an improvement to Rabin's algorithm that eliminates those drawbacks.
+
+I'm not sure why I never published this report. However, I think it was because, after writing it, I realized that the algorithm could be fairly easily derived directly from Rabin's algorithm. So, I didn't feel that it added much to what Rabin had done. However, I've been told that this paper is cited in the cryptography literature and is considered significant, so perhaps I was wrong.},
+url = {https://www.microsoft.com/en-us/research/publication/constructing-digital-signatures-one-way-function/},
+edition = {SRI International},
+number = {CSL-98},
+note = {This paper was published by IEEE in the Proceedings of HICSS-43 in January, 2010.},
+}
+
