--- a/Memoria/Book/book.tex
+++ b/Memoria/Book/book.tex
@@ -117,7 +117,7 @@
 % Dedication+ackowledgements (dedicatorias+agradecimientos)
 \input{dedication/dedicatoria.tex}            % EDIT this file or
                                               % comment it out
-\input{acknowledgements/agradecimientos.tex}  % EDIT this file or
+%\input{acknowledgements/agradecimientos.tex}  % EDIT this file or
                                               % comment it out
 
 % If this is the case, include definitions of acronyms (it's
