--- a/Memoria/Config/myconfig.tex
+++ b/Memoria/Config/myconfig.tex
@@ -98,8 +98,8 @@
 % General document information
 \newcommand{\myBookTitleSpanish}{Implementación y evaluación de algoritmos criptográficos postcuénticos en entornos IoT}
 \newcommand{\myBookTitleEnglish}{LACKS TITLE}
-\newcommand{\myThesisKeywords}{} % (máximo de cinco)
-\newcommand{\myThesisKeywordsEnglish}{} % (up to a maximum of five)
+\newcommand{\myThesisKeywords}{Algoritmo, Postcuántico, IoT, ESP32, Dilithium} % (máximo de cinco)
+\newcommand{\myThesisKeywordsEnglish}{Algorithm, Post-quantum, IoT, ESP32, Dilithium} % (up to a maximum of five)
 \newcommand{\myConfidentialContent}{No} % This can be Yes or No, used
                                 % in MUII as of July 2021
 
