--- a/Memoria/Book/dedication/dedicatoria.tex
+++ b/Memoria/Book/dedication/dedicatoria.tex
@@ -44,12 +44,12 @@
   \topskip0pt
   \vspace*{\fill}
 
-  \textbf{A nuestros alumnos pasados, presentes y futuros\ldots}\\
+  \textbf{A todos los que me han acompañado en este largo viaje\ldots}\\
 
   \vspace{3cm}
 
-  \emph{``Empieza haciendo lo necesario, luego haz lo posible y de
-    pronto empezarás a hacer lo imposible.''}\\ Francisco de Asís
+  \emph{``Sé paciente contigo mismo.
+  \newline Nada en la naturaleza florece todo el año.''}
 
 \end{flushright}  
 
